[package]
name = "hi-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano.git", rev = "ea30f65280360b1e1bc907cd42d4eb355fed3c9d" }
winit = "0.30.5"
color-eyre = "0.6"
image = "0.25.4"
